# SBR-Desktop-Project

./: .gitignore  Cargo.toml  README.md  RELEASE.md  build.rs  main.js  package-lock.json  package.json  preload.js
.cargo/: config.toml
.github/workflows/: release.yml
app-release-mac/: BACA_SAYA.txt
src/: connection.rs  mac_ui.rs  main.rs  styles.css  styles_mac.css  win_ui.rs
