[package]
name = "matchapro-gc-desktop"
version = "1.5.4"

edition = "2021"
authors = ["Jstfire - 7415 - 1500"]
description = "Desktop application untuk mengakses matchapro.web.bps.go.id - Sensus Ekonomi 2026"

[dependencies]
wry = "0.43"
tao = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
http = "1.0"
serde_json = "1"
open = "5"
image = "0.25"
base64 = "0.22"
dirs = "6.0.0"

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.bundle]
name = "Matchapro GC Desktop"
identifier = "com.matchapro.desktop"
icon = ["logo-app.png"]
version = "1.5.4"
copyright = "Copyright (c) Jstfire 2026"
category = "Productivity"
short_description = "Aplikasi desktop untuk Sensus Ekonomi 2026"

[package.metadata.bundle.osx]
minimum_system_version = "10.15"
